# python-project-template

./: pyproject.toml  readme.md
run/public/: demo_analytical_models.py  demo_plotter.py  demo_utils.py  model_A.yaml  util_demo.yaml
src/demoPkg/models/: analytic.py
src/demoProj/models/: analytic.py
src/demoProj/utils/: argparser.py
test/: readme.txt
