[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "demo-project"
version = "0.0.1"
dependencies = [
    "matplotlib",
    "numpy",
    "pyyaml",
    "scipy",
    "ConfigArgParse"
]

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]  # ["."] by default

